	CHG: Changed outside buildings to the tileset located in the "tilesets" folder instead of the "tilesets/out" one.

Alpha 1.15 (started 18/10/22) "Ladyfish Update":
	ADD: Added maps.
	CHG: Moved data files to another hard drive.
	FIX: Fixed missing "tunic0" sprite in the hero head's sprite in the minimap.
	FIX: Fixed map inconsistencies.
	FIX: Fixed some wrong bushes weights.
	FIX: Fixed pot layers in rooms 18 and 27 in the Fire Temple (B2).
	FIX: Fixed missing wall tile in room 35 (door 35N) in the Fire Temple (B2).
	FIX: Fixed owl not appearing before dungeon 3 because audio_manager not loaded.
	FIX: Fixed destructibles weights being too high around the Blacksmith.
	TDO: Add dialogues for Sahasrahla.
	TDO: Add dialogues for Ravio.
	TDO: Replace corrupted files.
	TDO: Fix pot weights in the Forest Temple.
	TDO: Fix water restting itself in the Forest Temple (B2).
	TDO: Fix "yellow_key" not saved in the Forest Temple.
	TDO: Update the minimap of the Forest Temple.
	TDO: Add 8px on the left of the room 14 of the Forest Temple (B1) making it possible to go back to 0F from B2.
	TDO: Add a sign if the door 8N of the Forest Temple (0F) is closed (bug).
	TDO: Copy changelog.txt issues to GitHub in order to improve issue tracking.
	TDO: Progressively switch enemies behaviour to ALTTD'S.

Alpha 1.15.1 (//23) "Ladyfish Update": Sprites and images
	TDO: Fix game intro dialogues.
	TDO: Add items treasure and inventory missing dialogues.
	TDO: Fix victory animation not being synchronised with Link movement.
	TDO: Fix wrong dialogue icons.
	TDO: Clean up unused sprite files.
	TDO: Fix Link being invisible after fighting boss.

Alpha 1.16 (//23) "Mackerel Update": Improvement
	TDO: Add maps.
	TDO: Rename all the soldiers in order to make them appear during the game and not at the beginning.
	TDO: Fix Link being able to run on water right after jumping from a cliff.