@@ -3825,6 +3825,9 @@ fait une promotion spéciale en
 ce moment sur les cartes.
 Cours donc le voir, sa boutique
 au sud est immanquable !
+Va au sanctuaire après, le
+prêtre a quelque chose à te
+dire.
 ]],
 }
 
@@ -3906,21 +3909,12 @@ Pentagone de droite
 dialog{
   id = "maps.houses.north_west.sanctuary.priest_1",
   text = [[
-Au nom de la Triforce de la
-Force, de la Sagesse et
-du Courage, Ainsi soit-il.$0
-J'irai vers la Triforce, de la
-Triforce qui m'exaucera, moi et
-toute ma jeunesse.
-Mettez une garde à ma bouche
-et une porte à mes lèvres.$0
-Et que la Triforce rayonne sans
-fin sur mon salut, maintenant et
-pour ce qu'il viendra. Que mon
-cri parvienne à la Triforce.$0
-Et que celle-ci soit avec vous,
-maintenant et toujours.
-Ainsi soit-il.
+...$0
+...$0
+...
+Ah ! Te voilà enfin, $v
+J'avais quelque chose d'important
+à te dire...
 ]],
 }
 
