@@ -38532,6 +38532,17 @@ teletransporter{
   destination = "_side",
 }
 
+teletransporter{
+  layer = -1,
+  x = -16,
+  y = 0,
+  width = 16,
+  height = 1440,
+  transition = "scrolling",
+  destination_map = "out/i1",
+  destination = "_side",
+}
+
 tile{
   layer = 0,
   x = 80,
@@ -69693,7 +69704,7 @@ tile{
 
 tile{
   layer = 0,
-  x = -16,
+  x = 8,
   y = 296,
   width = 8,
   height = 8,
@@ -73872,6 +73883,28 @@ enemy{
   direction = 0,
   breed = "outside/hinox_blue",
   treasure_name = "random_mountains",
+}
+
+teletransporter{
+  layer = 0,
+  x = 0,
+  y = 1440,
+  width = 1280,
+  height = 16,
+  transition = "scrolling",
+  destination_map = "out/j2",
+  destination = "_side",
+}
+
+teletransporter{
+  layer = 0,
+  x = 0,
+  y = -16,
+  width = 1280,
+  height = 16,
+  transition = "scrolling",
+  destination_map = "out/j7",
+  destination = "_side",
 }
 
 tile{
